Fixed unexpected html behaviour regarding linebreaks in html code

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -658,11 +658,6 @@ a.generic:link, a.generic:visited, a.generic:hover
 	font-size: 2em;
 }
 
-#main_menu
-{
-	padding-right: 0.1em;
-}
-
 #header_radio_volume_icon_plus
 {
 	margin-left: 0.8em;
